# PlutoniumManager

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: installer.rs  main.rs  types.rs
