[package]
name = "plutonium-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
zip = "0.6.6"
tokio = { version = "1.28.1", features = ["full"] }
zip-extract = "0.1.2"
indicatif = "0.17.3"
futures-util = "0.3.28"
tar = "0.4.38"
flate2 = "1.0.26"
async-recursion = "1.0.4"
